# scikit-learn-bench

./: README.md  build_wheel.sh  pyproject.toml
.github/workflows/: cicd.yml  python-app.yml
src/: core.py  display.py  profile.py
src/scikit_learn_bench/: all_bench.py  cli.py  core.py
tests/: test_core.py  test_display.py  test_profilers.py  unit_test.py
usage_example/: app_2D_speed_mem.py  app_task_scalability.py  app_threads_scalability.py  tuto.py  tuto0_bench.py  tuto1.py  tuto1_all_bench.py  tuto2_2D_speed_mem.py  tuto3_data_scalability.py  tuto4_features_scalability.py  tuto5_max_time.py
